# spark-mllib-workshop

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
workshop/: basket-analysis.ipynb  basket.ipynb  churn.ipynb  spark.py
